# 42-scop

./: .gitignore  Cargo.toml  flake.nix
src/: axis.rs  env.rs  event.rs  helper.rs  main.rs  prelude.rs  render.rs  setting.rs  shader.wgsl  state.rs  window.rs
src/gpu/: Cargo.toml  load_texture.rs  main.frag  main.vert  mod.rs  process_object.rs  render.rs  vertex.rs
src/gpu/render/: mod.rs
src/gpu/src/: lib.rs  vertex.rs
src/gpu/src/render/: buffer.rs  mod.rs  shader.wgsl
src/graphic/: window.rs
src/matrix/: mod.rs  perspective.rs  transformation.rs
src/parse/: file_data.rs  get_line.rs  load_dir.rs  mod.rs  mtl.rs  obj.rs
src/parse/line/: expected_format.rs  format.rs  get_line.rs  keyword.rs  mod.rs  occurence.rs  token.rs
src/parse/mtl/: ka.rs  mod.rs  newmtl.rs  rule.rs
src/setting/: mod.rs  rotation.rs  speed.rs
src/state/: mod.rs
src/window/: mod.rs
