[package]
name = "scop"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.15.1"			# wgpu bind to vulkan / openGL / metal / DX12
winit = "0.28.3"		# create window
image = { version = "0.24.6", features = ["png"] }			# load image
bytemuck = { version = "1.13.1", features = ["derive"] }	# convert struct to byte array
pollster = "0.3.0"		# await main
log = "0.4.17"			# api to access the wgpu logger
env_logger = "0.10.0"	# in case of runtime error from wgpu, print the log
