[package]
name = "scop"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi = { git = "https://github.com/Alexdelia/yahmrslib.git", features = [
	"forty_two",
] }
ivec = { git = "https://github.com/Alexdelia/yahmrslib.git" }
hmerr = { git = "https://github.com/Alexdelia/yahmrslib.git" }
spof = { git = "https://github.com/Alexdelia/yahmrslib.git" }
glium = "0.32.1"
image = "0.25.10"
rand = "0.10.1"
